feat: Implement character creation and basic game flow
Introduces character creation as a new game state. This allows players to define their hero before embarking on their adventure.

Updates the game loop to include character creation and starting the game with a character. The `GameState` and related types have been extended to accommodate character data.

New schemas are added to `geminiService` for character generation. The `StoryInput` and `GameInterface` components are updated to reflect these changes, including buttons for character creation/editing and displaying character information. A typing animation for scene descriptions is also added to `GameInterface`.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         ::-webkit-scrollbar-thumb:hover {
             background: #64748b;
         }
+        /* Custom text glow */
+        .text-shadow-glow {
+            text-shadow: 0 0 8px rgba(255, 215, 0, 0.3); /* Soft golden glow */
+        }
     </style>
 <script type="importmap">
 {
